@@ -3,7 +3,7 @@ package hu.gdf.thesis.backend;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonSyntaxException;
-import hu.gdf.thesis.model.config.*;
+import hu.gdf.thesis.model.*;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
@@ -12,11 +12,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -24,33 +20,72 @@ import java.util.stream.Stream;
 @Slf4j
 public class FileHandler {
 
-    //Config directory path from application.properties
+
     @Autowired
     PathConfiguration pathConfiguration;
+    //Config directory path from application.properties
+    public String directory() {
+        return pathConfiguration.getPath();
+    }
+
+    //Serialization of Java objects with Gson
+    public String serialize(Config config) {
+        try {
+            Gson gsonBuilder = new GsonBuilder().setPrettyPrinting().create();
+            return gsonBuilder.toJson(config);
+        } catch (NullPointerException ex) {
+            log.error("Error occurred when trying to serialize java object. " + ex.getMessage());
+            return null;
+        }
+    }
+
+    //Deserialization of JSON with Gson
+    public Config deserialize(String fileName) {
+        try {
+            Gson gson = new Gson();
+            return gson.fromJson(readFromFile(fileName), Config.class);
+        } catch (JsonSyntaxException | IllegalStateException ex ) {
+            return null;
+        }
+    }
+
+    private Path path(String fileName, Boolean withExtension) {
+        try {
+            if (withExtension) {
+                return Path.of(directory() + File.separator + fileName + ".json");
+            }
+            return Path.of(directory() + File.separator + fileName);
+        } catch (NullPointerException ex){
+            log.warn("No files found in directory " + directory());
+            return null;
+        }
+    }
+
+    public boolean validateConfig (File file) {
+        return (deserialize(file.getName())!=null);
+    }
 
     //List all files in the specified directory
     public Set<String> listFilesInDirectory() {
-        return Stream.of(Objects.requireNonNull(new File(pathConfiguration.getPath()).listFiles((d, name) -> name.endsWith(".json"))))
+        return Stream.of(Objects.requireNonNull(new File(directory()).listFiles((directory, fileName) -> fileName.endsWith(".json"))))
                 .filter(file -> !file.isDirectory())
+                .filter(this::validateConfig)
                 .map(File::getName)
                 .collect(Collectors.toSet());
     }
 
-
     //Check if specific file exists in directory
     public boolean fileExists(String fileName) {
-        return Files.exists(Path.of(pathConfiguration.getPath() + File.separator + fileName + ".json"));
+        return Files.exists(path(fileName, true));
     }
 
     //If the file does not exist, create it in directory
     public void createFile(String fileName) {
         try {
-            String filePath = pathConfiguration.getPath() + File.separator + fileName + ".json";
-            if (Files.notExists(Path.of(filePath))) {
-                Files.createFile(Paths.get(filePath));
-                log.info("Created Config: " + fileName + ".json " + "In directory: " + pathConfiguration.getPath());
-            } else {
-                log.warn("Warning, file already existed in directory: " + pathConfiguration.getPath());
+            Path filePath = path(fileName, true);
+            if (Files.notExists(filePath)) {
+                Files.createFile(filePath);
+                log.info("Created Config: " + fileName + ".json " + "In directory: " + directory());
             }
         } catch (Exception ex) {
             log.error("Error when creating file: " + fileName + ".json", ex);
@@ -60,11 +95,9 @@ public class FileHandler {
     //If the file exists, parse the content as String
     public String readFromFile(String fileName) {
         try {
-            String filePath = pathConfiguration.getPath() + File.separator + fileName;
-            if (Files.exists(Path.of(filePath)) && fileName.endsWith(".json")) {
-                return new String(Files.readAllBytes(Paths.get(filePath)));
-            } else {
-                log.warn("File does not exist!");
+            Path filePath = path(fileName, false);
+            if (Files.exists(filePath) && fileName.endsWith(".json") && !Files.isDirectory(filePath)) {
+                return new String(Files.readAllBytes(filePath));
             }
         } catch (IOException ex) {
             log.error("Unable to read from file", ex);
@@ -75,12 +108,10 @@ public class FileHandler {
     //If the file exists in directory, delete it
     public void deleteFile(String fileName) {
         try {
-            String filePath = pathConfiguration.getPath() + File.separator + fileName;
-            if (Files.exists(Path.of(filePath))) {
-                Files.delete(Paths.get(filePath));
+            Path filePath = path(fileName, false);
+            if (Files.exists(filePath)) {
+                Files.delete(filePath);
                 log.info("Deleted Config: " + filePath);
-            } else {
-                log.warn("Warning, file was not found in directory: " + pathConfiguration.getPath());
             }
         } catch (IOException ex) {
             log.error("Error when deleting file: " + fileName + ".json", ex);
@@ -88,91 +119,83 @@ public class FileHandler {
     }
 
     //If the file exists in directory, overwrite it's content
-    public void writeConfigToFile(String fileName, String fileContent) {
+    public void writeConfigToFile(String fileName, Config config) {
         try {
-            String filePath = pathConfiguration.getPath() + File.separator + fileName;
-            if (Files.exists(Path.of(filePath))) {
-                Files.write(Paths.get(filePath), fileContent.getBytes());
+            Path filePath = path(fileName, false);
+            if (Files.exists((filePath))) {
+                Files.writeString(filePath, serialize(config));
                 log.info("Saved Config: " + filePath);
-            } else {
-                log.warn("Warning, file was not found in directory: " + pathConfiguration.getPath());
             }
         } catch (IOException ex) {
             log.error("Error when trying to save configuration data to the selected file", ex);
         }
     }
 
-    //Serialization of JSON using Gson
-    public String serializeJsonConfig(Config config) {
-        Gson gsonBuilder = new GsonBuilder().setPrettyPrinting().create();
-        return gsonBuilder.toJson(config);
+
+    //Lists of specific data objects
+
+    public void addCategory(String fileName, Config config, Category category) {
+
+        config.getCategories().add(category);
+
+        writeConfigToFile(fileName, config);
+
     }
 
-    //Deserialization of JSON using Gson
-    public <T> T deserializeJsonConfig(String configJson, Class<T> classOfT) {
-        try {
-            Gson gson = new Gson();
-            return gson.fromJson(configJson, classOfT);
-        } catch (JsonSyntaxException ex) {
-            log.error("Error occurred when trying to deserialize Json file. " + ex.getMessage());
-            return null;
-        }
+    public void addEndpoint(String fileName, Config config, Category category, Endpoint endpoint) {
+        category.getEndpoints().add(endpoint);
+
+        int categoryIndex = config.getCategories().indexOf(category);
+
+        config.getCategories().set(categoryIndex, category);
+
+        writeConfigToFile(fileName, config);
     }
 
-    //Lists of specific objects in deserialized json object
+    public void addField(String fileName, Config config, Category category, Endpoint endpoint, Field field) {
+        endpoint.getFields().add(field);
 
-    public List<Category> getAllCategories(Config config) {
-        try {
-            return new ArrayList<>(config.getServer().getCategories());
-        } catch (NullPointerException ex) {
-            return new ArrayList<>();
-        }
+        int endpointIndex = category.getEndpoints().indexOf(endpoint);
+        category.getEndpoints().set(endpointIndex, endpoint);
+
+        int categoryIndex = config.getCategories().indexOf(category);
+        config.getCategories().set(categoryIndex, category);
+
+        writeConfigToFile(fileName, config);
     }
 
-    public List<Address> getAllAddresses(Config config) {
-        try {
-            return new ArrayList<>(config.getServer().getAddresses());
-        } catch (NullPointerException ex) {
-            return new ArrayList<>();
-        }
+    public void addOperation(String fileName, Config config, Category category, Endpoint endpoint, Field
+            field, Operation operation) {
+        field.getOperations().add(operation);
+
+        int fieldIndex = endpoint.getFields().indexOf(field);
+        endpoint.getFields().set(fieldIndex, field);
+
+        int endpointIndex = category.getEndpoints().indexOf(endpoint);
+        category.getEndpoints().set(endpointIndex, endpoint);
+
+        int categoryIndex = config.getCategories().indexOf(category);
+        config.getCategories().set(categoryIndex, category);
+
+        writeConfigToFile(fileName, config);
     }
 
-    public List<Entry> getAllEntries(Category category) {
-        try {
-            return new ArrayList<>(category.getEntries());
-        } catch (NullPointerException ex) {
-            return new ArrayList<>();
-        }
+    public void addAddress (String fileName, Config config, Address address) {
+        config.getAddresses().add(address);
+
+        writeConfigToFile(fileName, config);
     }
-
-    public List<RestField> getAllRestFields(Entry entry) {
-        try {
-            return new ArrayList<>(entry.getRestFields());
-        } catch (NullPointerException ex) {
-            return new ArrayList<>();
-        }
-    }
-
-    public List<Operation> getAllOperations(RestField restField) {
-        try {
-            return new ArrayList<>(restField.getOperations());
-        } catch (NullPointerException ex) {
-            return new ArrayList<>();
-        }
-    }
-
-    //Deletion of specific elements in deserialized json object
-
-    public void deleteOrEditCategory(String fileName, Config config, Category category, boolean edit) {
+    //Delete or edit specific elements in config
+    public void modifyCategory(String fileName, Config config, Category category, boolean edit) {
         try {
             if (edit) {
-                int categoryIndex = config.getServer().getCategories().indexOf(category);
-                config.getServer().getCategories().set(categoryIndex, category);
+                int categoryIndex = config.getCategories().indexOf(category);
+                config.getCategories().set(categoryIndex, category);
             } else {
-                config.getServer().getCategories().remove(category);
+                config.getCategories().remove(category);
             }
 
-            writeConfigToFile(fileName, serializeJsonConfig(config));
+            writeConfigToFile(fileName, config);
 
         } catch (NullPointerException ex) {
             log.error("Error when trying to edit or delete category in config", ex);
@@ -180,82 +203,84 @@ public class FileHandler {
     }
 
 
-    public void deleteOrEditEntry(String fileName, Config config, Category category, Entry entry, boolean edit) {
+    public void modifyEndpoint(String fileName, Config config, Category category, Endpoint endpoint, boolean edit) {
         try {
             if (edit) {
-                int entryIndex = category.getEntries().indexOf(entry);
-                category.getEntries().set(entryIndex, entry);
+                int endpointIndex = category.getEndpoints().indexOf(endpoint);
+                category.getEndpoints().set(endpointIndex, endpoint);
 
             } else {
-                category.getEntries().remove(entry);
+                category.getEndpoints().remove(endpoint);
             }
 
-            int categoryIndex = config.getServer().getCategories().indexOf(category);
-            config.getServer().getCategories().set(categoryIndex, category);
+            int categoryIndex = config.getCategories().indexOf(category);
+            config.getCategories().set(categoryIndex, category);
 
-            writeConfigToFile(fileName, serializeJsonConfig(config));
+            writeConfigToFile(fileName, config);
 
         } catch (NullPointerException ex) {
-            log.error("Error when trying to edit or delete category in config", ex);
+            log.error("Error when trying to edit or delete endpoint in config", ex);
         }
 
     }
 
-    public void deleteOrEditRestField(String fileName, Config config, Category category, Entry entry, RestField restField, boolean edit) {
+    public void modifyField(String fileName, Config config, Category category, Endpoint endpoint, Field field, boolean edit) {
         try {
             if (edit) {
-                int restFieldIndex = entry.getRestFields().indexOf(restField);
-                entry.getRestFields().set(restFieldIndex, restField);
+                int fieldIndex = endpoint.getFields().indexOf(field);
+                endpoint.getFields().set(fieldIndex, field);
             } else {
-                entry.getRestFields().remove(restField);
+                endpoint.getFields().remove(field);
             }
 
-            int entryIndex = category.getEntries().indexOf(entry);
-            category.getEntries().set(entryIndex, entry);
+            int endpointIndex = category.getEndpoints().indexOf(endpoint);
+            category.getEndpoints().set(endpointIndex, endpoint);
 
-            int categoryIndex = config.getServer().getCategories().indexOf(category);
-            config.getServer().getCategories().set(categoryIndex, category);
+            int categoryIndex = config.getCategories().indexOf(category);
+            config.getCategories().set(categoryIndex, category);
 
-            writeConfigToFile(fileName, serializeJsonConfig(config));
+            writeConfigToFile(fileName, config);
 
         } catch (NullPointerException ex) {
-            log.error("Error when trying to edit or delete category in config", ex);
+            log.error("Error when trying to edit or delete field in config", ex);
         }
     }
 
 
-    public void deleteOrEditOperation(String fileName, Config config, Category category, Entry entry, RestField
-            restField, Operation operation, boolean edit) {
+    public void modifyOperation(String fileName, Config config, Category category, Endpoint endpoint, Field
+            field, Operation operation, boolean edit) {
         try {
             if (edit) {
-                int operationIndex = restField.getOperations().indexOf(operation);
-                restField.getOperations().set(operationIndex, operation);
+                int operationIndex = field.getOperations().indexOf(operation);
+                field.getOperations().set(operationIndex, operation);
             } else {
-                restField.getOperations().remove(operation);
+                field.getOperations().remove(operation);
             }
-            int restFieldIndex = entry.getRestFields().indexOf(restField);
-            entry.getRestFields().set(restFieldIndex, restField);
 
-            int entryIndex = category.getEntries().indexOf(entry);
-            category.getEntries().set(entryIndex, entry);
+            int fieldIndex = endpoint.getFields().indexOf(field);
+            endpoint.getFields().set(fieldIndex, field);
 
-            int categoryIndex = config.getServer().getCategories().indexOf(category);
-            config.getServer().getCategories().set(categoryIndex, category);
+            int endpointIndex = category.getEndpoints().indexOf(endpoint);
+            category.getEndpoints().set(endpointIndex, endpoint);
 
-            writeConfigToFile(fileName, serializeJsonConfig(config));
+            int categoryIndex = config.getCategories().indexOf(category);
+            config.getCategories().set(categoryIndex, category);
+
+            writeConfigToFile(fileName, config);
 
         } catch (NullPointerException ex) {
-            log.error("Error when trying to edit or delete category in config", ex);
+            log.error("Error when trying to edit or delete operation in config", ex);
         }
     }
 
     public void deleteAddress(String fileName, Config config, Address address) {
         try {
-            config.getServer().getAddresses().remove(address);
-            writeConfigToFile(fileName, serializeJsonConfig(config));
+            config.getAddresses().remove(address);
+
+            writeConfigToFile(fileName, config);
 
         } catch (NullPointerException ex) {
-            log.error("Error when trying to edit or delete category in config", ex);
+            log.error("Error when trying to edit or delete address in config", ex);
         }
 
     }
